fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -4,13 +4,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow-x: clip;
 }
 
 body {
     background-color: #24252a;
-    -webkit-clip-path: inset(0); /* safari*/
-    clip-path: inset(0);
-    clip: rect(0px, auto, auto, 0px); /* IE11/Edge (not that IE11 supports sticky anyway!)*/
+    overflow-y: overlay;
 }
 
 .title {
@@ -107,6 +106,7 @@ button:hover {
 }
 
 .hamburgare {
+    overflow: hidden;
     display: none;
     cursor: pointer;
 }
